--- a/pisa_visualization.html
+++ b/pisa_visualization.html
@@ -1,120 +1,192 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
+<title>Pisa Visualisations</title>
 <style>
 
-.axis .domain {
-  display: none;
+svg {
+  font: 10px sans-serif;
+}
+
+.background path {
+  fill: none;
+  stroke: none;
+  stroke-width: 20px;
+  pointer-events: stroke;
+}
+
+.foreground path {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
+
+.axis .title {
+  font-size: 11px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.axis line,
+.axis path {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.label {
+  -webkit-transition: fill 125ms linear;
+}
+
+.active .label:not(.inactive) {
+  font-weight: bold;
+}
+
+.label.inactive {
+  fill: #ccc;
+}
+
+.foreground path.inactive {
+  stroke: #ccc;
+  stroke-opacity: .5;
+  stroke-width: 1px;
 }
 
 </style>
-<svg width="1500" height="600"></svg>
-<script src="https://d3js.org/d3.v4.min.js"></script>
+<body>
+<script src="//d3js.org/d3.v3.min.js"></script>
 <script>
 
-var svg = d3.select("svg"),
-    margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = +svg.attr("width") - margin.left - margin.right,
-    height = +svg.attr("height") - margin.top - margin.bottom,
-    g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+var margin = {top: 30, right: 40, bottom: 20, left: 200},
+    width = 960 - margin.left - margin.right,
+    height = 700 - margin.top - margin.bottom;
 
-var x = d3.scaleBand()
-    .rangeRound([0, width])
-    .paddingInner(0.05)
-    .align(0.1);
+var dimensions = [
+  {
+    name: "Country",
+    scale: d3.scale.ordinal().rangePoints([0, height]),
+    type: String
+  },
+  {
+    name: "ISCED 1",
+    scale: d3.scale.linear().range([0, height]),
+    type: Number
+  },
+  {
+    name: "ISCED 2",
+    scale: d3.scale.linear().range([height, 0]),
+    type: Number
+  },
+  {
+    name: "ISCED 3B,C",
+    scale: d3.scale.linear().range([height, 0]),
+    type: Number
+  },
+  {
+    name: "ISCED 5A,6",
+    scale: d3.scale.linear().range([height, 0]),
+    type: Number
+  },
+  {
+    name: "ISCED 5B",
+    scale: d3.scale.linear().range([height, 0]),
+    type: Number
+  },
+  {
+    name: "ISCED 3A,ISCED 4",
+    scale: d3.scale.linear().range([height, 0]),
+    type: Number
+  },
+  {
+    name: "None",
+    scale: d3.scale.linear().range([height, 0]),
+    type: Number
+  }
+];
 
-var y = d3.scaleLinear()
-    .rangeRound([height, 0]);
+var x = d3.scale.ordinal()
+    .domain(dimensions.map(function(d) { return d.name; }))
+    .rangePoints([0, width]);
 
-var z = d3.scaleOrdinal()
-    .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+var line = d3.svg.line()
+    .defined(function(d) { debugger;return !isNaN(d[1]); });
 
-d3.csv("maths_grade_mother_education.csv", function(d, i, columns) {
-  for (i = 1, t = 0; i < columns.length; ++i) t += d[columns[i]] = +d[columns[i]];
-  d.total = t;
-  return d;
-},
-function(error, data) {
+var yAxis = d3.svg.axis()
+    .orient("left");
+
+var svg = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+var dimension = svg.selectAll(".dimension")
+    .data(dimensions)
+  .enter().append("g")
+    .attr("class", "dimension")
+    .attr("transform", function(d) { return "translate(" + x(d.name) + ")"; });
+
+d3.csv("maths_grade_mother_education.csv", function(error, data) {
   if (error) throw error;
 
-  debugger;
-  var keys = data.columns.slice(1);
- 
-  var m=[d3.max(data,function(d) {
-	return d['Mother_ISCED_1'];
-  }),
-  d3.max(data,function(d) {
-	return d['Mother_ISCED_2'];
-  }),
-  d3.max(data,function(d) {
-	return d['Mother_ISCED_5A,6'];
-  }),
-  d3.max(data,function(d) {
-	return d['Mother_ISCED 3B,C'];
-	}),
-	d3.max(data,function(d) {
-	return d['Mother_ISCED_5B'];
-  }),
-  d3.max(data,function(d) {
-	return d['Mother_ISCED 3A,ISCED 4'];
-  }),
-  d3.max(data,function(d) {
-	return d['Mother_None'];
-  })]
-  max=d3.max(m)
-   data.sort(function(a, b) { return b.total - a.total; });
-  x.domain(data.map(function(d) { return d.Country; }));
-  y.domain([0,d3.max(data, function(d) { return d.total; })]).nice();
-  z.domain(keys);
+  dimensions.forEach(function(dimension) {
+    dimension.scale.domain(dimension.type === Number
+        ? d3.extent(data, function(d) { return +d[dimension.name]; })
+        : data.map(function(d) { return d[dimension.name]; }).sort());
+  });
 
-  g.append("g")
-    .selectAll("g")
-    .data(d3.stack().keys(keys)(data))
-    .enter().append("g")
-      .attr("fill", function(d) { return z(d.key); })
-    .selectAll("rect")
-    .data(function(d) { return d; })
-    .enter().append("rect")
-      .attr("x", function(d) { return x(d.data.Country); })
-      .attr("y", function(d) { return y(d[0]); })
-     .attr("height", function(d) {debugger; return y(d[0]) - y(d[1]); })
-      .attr("width", x.bandwidth());
+  svg.append("g")
+      .attr("class", "background")
+    .selectAll("path")
+      .data(data)
+    .enter().append("path")
+      .attr("d", draw);
 
-  g.append("g")
+  svg.append("g")
+      .attr("class", "foreground")
+    .selectAll("path")
+      .data(data)
+    .enter().append("path")
+      .attr("d", draw);
+
+  dimension.append("g")
       .attr("class", "axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(d3.axisBottom(x));
-
-  g.append("g")
-      .attr("class", "axis")
-      .call(d3.axisLeft(y).ticks(null, "s"))
+      .each(function(d) { d3.select(this).call(yAxis.scale(d.scale)); })
     .append("text")
-      .attr("x", 2)
-      .attr("y", y(y.ticks().pop()) + 0.5)
-      .attr("dy", "0.32em")
-      .attr("fill", "#000")
-      .attr("font-weight", "bold")
-      .attr("text-anchor", "start")
-      .text("Population");
+      .attr("class", "title")
+      .attr("text-anchor", "middle")
+      .attr("y", -9)
+      .text(function(d) { return d.name; });
 
-  var legend = g.append("g")
-      .attr("font-family", "sans-serif")
-      .attr("font-size", 10)
-      .attr("text-anchor", "end")
-    .selectAll("g")
-    .data(keys.slice().reverse())
-    .enter().append("g")
-      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
+  // Rebind the axis data to simplify mouseover.
+  svg.select(".axis").selectAll("text:not(.title)")
+      .attr("class", "label")
+      .data(data, function(d) { return d.name || d; });
 
-  legend.append("rect")
-      .attr("x", width - 19)
-      .attr("width", 19)
-      .attr("height", 19)
-      .attr("fill", z);
+  var projection = svg.selectAll(".axis text,.background path,.foreground path")
+      .on("mouseover", mouseover)
+      .on("mouseout", mouseout);
 
-  legend.append("text")
-      .attr("x", width - 24)
-      .attr("y", 9.5)
-      .attr("dy", "0.32em")
-      .text(function(d) { return d; });
+  function mouseover(d) {
+    svg.classed("active", true);
+    projection.classed("inactive", function(p) { return p !== d; });
+    projection.filter(function(p) { return p === d; }).each(moveToFront);
+  }
+
+  function mouseout(d) {
+    svg.classed("active", false);
+    projection.classed("inactive", false);
+  }
+
+  function moveToFront() {
+    this.parentNode.appendChild(this);
+  }
 });
+
+function draw(d) {
+  return line(dimensions.map(function(dimension) {
+  debugger;
+    return [x(dimension.name), dimension.scale(d[dimension.name])];
+  }));
+}
 
 </script>
